--- a/AstronomyInteroperability/AstronomyInteroperability/Base.lproj/Main.storyboard
+++ b/AstronomyInteroperability/AstronomyInteroperability/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cw4-AF-xnT">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Collection View Controller-->
+        <!--Sol <Number>-->
         <scene sceneID="iwB-sc-73y">
             <objects>
-                <collectionViewController id="t2d-xj-Qz7" sceneMemberID="viewController">
+                <collectionViewController id="t2d-xj-Qz7" customClass="PhotosCollectionViewController" customModule="AstronomyInteroperability" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="FSG-Hv-Ql1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -23,15 +23,27 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RoverCell" id="hjX-pp-ha4">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RoverCell" id="hjX-pp-ha4" customClass="RoverCollectionViewCell" customModule="AstronomyInteroperability" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Mgp-06-qXv">
                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kYJ-zR-337">
+                                            <rect key="frame" x="8" y="12" width="104" height="104"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailingMargin" secondItem="kYJ-zR-337" secondAttribute="trailing" constant="8" id="5qk-Hy-q0E"/>
+                                        <constraint firstItem="kYJ-zR-337" firstAttribute="leading" secondItem="Mgp-06-qXv" secondAttribute="leadingMargin" id="6Lx-ls-OrC"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="kYJ-zR-337" secondAttribute="bottom" constant="4" id="Bgd-VB-nd5"/>
+                                        <constraint firstItem="kYJ-zR-337" firstAttribute="top" secondItem="Mgp-06-qXv" secondAttribute="topMargin" constant="4" id="p8p-3H-9nb"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
                                 <connections>
-                                    <segue destination="1e3-vg-YSx" kind="show" id="iwH-B8-ePx"/>
+                                    <outlet property="roverImage" destination="kYJ-zR-337" id="Pbm-Kg-Zc5"/>
+                                    <segue destination="1e3-vg-YSx" kind="show" identifier="PhotoDetailSegue" id="iwH-B8-ePx"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -40,16 +52,23 @@
                             <outlet property="delegate" destination="t2d-xj-Qz7" id="vsz-DI-JXD"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="OJT-66-1pC"/>
+                    <navigationItem key="navigationItem" title="Sol &lt;Number&gt;" id="OJT-66-1pC">
+                        <barButtonItem key="leftBarButtonItem" systemItem="rewind" id="nBu-R5-bE3"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="fastForward" id="h1f-Hr-030"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="backButton" destination="nBu-R5-bE3" id="HTP-It-bAn"/>
+                        <outlet property="nextSolButton" destination="h1f-Hr-030" id="YHo-cG-fXn"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xDV-hX-Dl8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1036.231884057971" y="117.85714285714285"/>
+            <point key="canvasLocation" x="1034.7826086956522" y="117.85714285714285"/>
         </scene>
-        <!--View Controller-->
+        <!--Photo Detail View Controller-->
         <scene sceneID="KCd-Og-l07">
             <objects>
-                <viewController id="1e3-vg-YSx" sceneMemberID="viewController">
+                <viewController id="1e3-vg-YSx" customClass="PhotoDetailViewController" customModule="AstronomyInteroperability" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Piq-85-5Nx">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -93,6 +112,12 @@
                         <viewLayoutGuide key="safeArea" id="bXJ-0y-t0R"/>
                     </view>
                     <navigationItem key="navigationItem" id="fcu-uS-AF4"/>
+                    <connections>
+                        <outlet property="cameraDetailsLabel" destination="Mx1-s2-jis" id="DEy-tq-0FE"/>
+                        <outlet property="marsRoverImage" destination="OqY-3i-h8x" id="Zgx-uk-CJm"/>
+                        <outlet property="photoDetailsLabel" destination="ree-PQ-EHQ" id="HUl-wo-hFs"/>
+                        <outlet property="savePhotoButton" destination="mTI-FT-IIv" id="hGP-7J-Uwx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="veJ-yY-aH2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
